(MINOR) Submit Button iOS Coloration & Alignment Fix
Attempt to fix submit buttons appearance on iOS. Previously not centered and gray in spite of css code calling for a bluish color...

input[type="submit"]{
    -webkit-appearance:none;
    opacity: 1;
}

--- a/style.css
+++ b/style.css
@@ -175,6 +175,11 @@ input,textarea{
 
 }
 
+input[type="submit"]{
+    -webkit-appearance:none;
+    opacity: 1;
+}
+
 /* Used to set placeholder color for different browsers*/
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: rgba(255,255,255,70%);
